[gd_scene load_steps=5 format=2]

[ext_resource path="res://checker_floor.gltf" type="PackedScene" id=1]
[ext_resource path="res://GimbalMouseEdgeCamera.gd" type="Script" id=2]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="Spatial" type="Spatial"]

[node name="checker_floor2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.226321, 11.4842, 0.0563562 )

[node name="checker_floor" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.995247, -0.0198123, -1.00195 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0115015, 0.999934, 0, -0.999934, -0.0115015, -0.492655, 10.2403, 0 )
visible = false
light_energy = 3.349
spot_range = 11.8311

[node name="GimbalMouseEdgeCamera" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5897, 6.43354 )
script = ExtResource( 2 )

[node name="MousePositionHUD" type="Label" parent="GimbalMouseEdgeCamera"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationHHUD" type="Label" parent="GimbalMouseEdgeCamera"]
margin_left = 76.0
margin_top = 42.0
margin_right = 429.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GimbalMouseEdgeCamera/RotationHHUD"]
margin_left = -63.0
margin_top = -2.0
margin_right = -23.0
margin_bottom = 12.0
text = "Rotation H"

[node name="MaxRotHHUD" type="Label" parent="GimbalMouseEdgeCamera"]
margin_left = 82.0
margin_top = 91.0
margin_right = 435.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GimbalMouseEdgeCamera/MaxRotHHUD"]
margin_left = -65.0
margin_top = -1.0
margin_right = -25.0
margin_bottom = 13.0
text = "Max roth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationDirectionHHud" type="Label" parent="GimbalMouseEdgeCamera"]
margin_left = 2.0
margin_top = 152.0
margin_right = 355.0
margin_bottom = 187.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterGimbal" type="Spatial" parent="GimbalMouseEdgeCamera"]

[node name="InnerGimbal" type="Spatial" parent="GimbalMouseEdgeCamera/OuterGimbal"]

[node name="Camera" type="Camera" parent="GimbalMouseEdgeCamera/OuterGimbal/InnerGimbal"]
fov = 75.9375
